ENH:new tests added

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -71,7 +71,19 @@ ADD_TEST(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_TEST(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_TEST(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
 ADD_TEST(itkWarpImageFilterTest itkWarpImageFilterTest)
+ADD_TEST(itkZeroCrossingImageFilterTest itkZeroCrossingImageFilterTest)
+ADD_TEST(itkLaplacianImageFilterTest itkLaplacianImageFilterTest)
+ADD_TEST(itkDivideImageFilterTest itkDivideImageFilterTest)
+ADD_TEST(itkSobelEdgeDetectionImageFilterTest itkSobelEdgeDetectionImageFilterTest)
+ADD_TEST(itkZeroCrossingBasedEdgeDetectionImageFilterTest itkZeroCrossingBasedEdgeDetectionImageFilterTest)
+ADD_TEST(itkCannyEdgeDetectionImageFilterTest itkCannyEdgeDetectionImageFilterTest)
 
+ADD_EXECUTABLE(itkCannyEdgeDetectionImageFilterTest itkCannyEdgeDetectionImageFilterTest)
+ADD_EXECUTABLE(itkZeroCrossingBasedEdgeDetectionImageFilterTest itkZeroCrossingBasedEdgeDetectionImageFilterTest)
+ADD_EXECUTABLE(itkSobelEdgeDetectionImageFilterTest itkSobelEdgeDetectionImageFilterTest)
+ADD_EXECUTABLE(itkDivideImageFilterTest itkDivideImageFilterTest)
+ADD_EXECUTABLE(itkLaplacianImageFilterTest itkLaplacianImageFilterTest)
+ADD_EXECUTABLE(itkZeroCrossingImageFilterTest itkZeroCrossingImageFilterTest)
 ADD_EXECUTABLE(itkAsinImageFilterAndAdaptorTest itkAsinImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAcosImageFilterAndAdaptorTest itkAcosImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest)
