--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -8,6 +8,7 @@ itkEventObject
 itkExceptionObject 
 itkFastMutexLock 
 itkFileOutputWindow
+itkGaussianKernelFunction
 itkImageIOCommon
 itkImageIO
 itkIndent 
