--- a/doxygen.config.in
+++ b/doxygen.config.in
@@ -82,7 +82,7 @@ HIDE_UNDOC_CLASSES    = NO
 # the file and class documentation (similar to JavaDoc). 
 # Set to NO to disable this. 
 
-BRIEF_MEMBER_DESC     = YES
+BRIEF_MEMBER_DESC     = NO
 
 # If the REPEAT_BRIEF tag is set to YES (the default) Doxygen will prepend 
 # the brief description of a member or function before the detailed description. 
