ENH: Added PrintSelfCheck.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -13,6 +13,11 @@ ITKBasicFilters
 ITKCommon
 VXLNumerics
 )
+ADD_TEST(PrintSelf-Common ${TCL_TCLSH}
+         ${ITK_SOURCE_DIR}/Utilities/Dart/PrintSelfCheck.tcl  
+         ${ITK_SOURCE_DIR}/Code/Algorithms)
+ENDIF (TCL_TCLSH)
+
 ADD_TEST(itkCurvatureFlowTest itkCurvatureFlowTest)
 ADD_TEST(itkDemonsRegistrationFilterTest itkDemonsRegistrationFilterTest)
 ADD_TEST(itkExtractMeshConnectedRegionsTest itkExtractMeshConnectedRegionsTest)
@@ -24,6 +29,7 @@ ADD_TEST(itkImageMomentsTest itkImageMomentsTest)
 ADD_TEST(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageAffineMutualInformationGradientDescentRegistrationTest itkImageToImageAffineMutualInformationGradientDescentRegistrationTest)
+ADD_TEST(itkImageToImageScaleMutualInformationGradientDescentRegistrationTest itkImageToImageScaleMutualInformationGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest)
@@ -70,6 +76,7 @@ ADD_EXECUTABLE(itkImageMomentsTest itkImageMomentsTest)
 ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkImageToImageAffineMutualInformationGradientDescentRegistrationTest itkImageToImageAffineMutualInformationGradientDescentRegistrationTest)
+ADD_EXECUTABLE(itkImageToImageScaleMutualInformationGradientDescentRegistrationTest itkImageToImageScaleMutualInformationGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest)
