ENH: Test for GaussianImageSource

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -39,6 +39,7 @@ ADD_TEST(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
 ADD_TEST(itkFilterDispatchTest itkFilterDispatchTest)
 ADD_TEST(itkAddImageFilterTest itkAddImageFilterTest)
 ADD_TEST(itkFloodFillIteratorTest itkFloodFillIteratorTest)
+ADD_TEST(itkGaussianImageSourceTest itkGaussianImageSourceTest)
 ADD_TEST(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_TEST(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_TEST(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
@@ -111,6 +112,7 @@ ADD_EXECUTABLE(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
 ADD_EXECUTABLE(itkFilterDispatchTest itkFilterDispatchTest)
 ADD_EXECUTABLE(itkAddImageFilterTest itkAddImageFilterTest)
 ADD_EXECUTABLE(itkFloodFillIteratorTest itkFloodFillIteratorTest)
+ADD_EXECUTABLE(itkGaussianImageSourceTest itkGaussianImageSourceTest)
 ADD_EXECUTABLE(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_EXECUTABLE(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_EXECUTABLE(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
