ERR: fix test name.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -13,7 +13,7 @@ ITKCommon
 )
 
 IF (TCL_TCLSH)
-ADD_TEST(PrintSelf-Common ${TCL_TCLSH}
+ADD_TEST(PrintSelf-BasicFilters ${TCL_TCLSH}
          ${ITK_SOURCE_DIR}/Utilities/Dart/PrintSelfCheck.tcl  
          ${ITK_SOURCE_DIR}/Code/BasicFilters)
 ENDIF (TCL_TCLSH)
