--- a/Testing/Code/Numerics/CMakeLists.txt
+++ b/Testing/Code/Numerics/CMakeLists.txt
@@ -1,6 +1,6 @@
 SUBDIRS(vxl)
 
-ADD_TEST(PrintSelf-Common ${TCL_TCLSH}
+ADD_TEST(PrintSelf-Numerics ${TCL_TCLSH}
          ${ITK_SOURCE_DIR}/Utilities/Dart/PrintSelfCheck.tcl  
          ${ITK_SOURCE_DIR}/Code/Algorithms)
 ENDIF (TCL_TCLSH)
