ENH:Reorganizing IO filters

--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -10,6 +10,8 @@ itkPNGImageIOFactory
 itkPNGImageIO
 itkVOLImageIOFactory
 itkVOLImageIO
+itkVTKImageIOFactory
+itkVTKImageIO
 )
 
 # Add ITKIO library
