ENH: Made changes as per code review. Added unit tet for itkFastMarchingExtensionImageFilter.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -24,6 +24,7 @@ ADD_TEST(itkCurvatureFlowTest itkCurvatureFlowTest)
 ADD_TEST(itkDemonsRegistrationFilterTest itkDemonsRegistrationFilterTest)
 ADD_TEST(itkExtractMeshConnectedRegionsTest itkExtractMeshConnectedRegionsTest)
 ADD_TEST(itkFastMarchingTest itkFastMarchingTest)
+ADD_TEST(itkFastMarchingExtensionImageFilterTest itkFastMarchingExtensionImageFilterTest)
 ADD_TEST(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
 ADD_TEST(itkAlgorithmsHeaderTest itkAlgorithmsHeaderTest)
 ADD_TEST(itkFuzzyConnectednessImageFilterTest itkFuzzyConnectednessImageFilterTest)
@@ -70,6 +71,7 @@ ADD_EXECUTABLE(itkCurvatureFlowTest itkCurvatureFlowTest)
 ADD_EXECUTABLE(itkDemonsRegistrationFilterTest itkDemonsRegistrationFilterTest)
 ADD_EXECUTABLE(itkExtractMeshConnectedRegionsTest itkExtractMeshConnectedRegionsTest)
 ADD_EXECUTABLE(itkFastMarchingTest itkFastMarchingTest)
+ADD_EXECUTABLE(itkFastMarchingExtensionImageFilterTest itkFastMarchingExtensionImageFilterTest)
 ADD_EXECUTABLE(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
 ADD_EXECUTABLE(itkAlgorithmsHeaderTest itkAlgorithmsHeaderTest)
 ADD_EXECUTABLE(itkFuzzyConnectednessImageFilterTest itkFuzzyConnectednessImageFilterTest)
