ERR: missing IF.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -15,6 +15,8 @@ ITKBasicFilters
 ITKCommon
 VXLNumerics
 )
+
+IF (TCL_TCLSH)
 ADD_TEST(PrintSelf-Algorithms ${TCL_TCLSH}
          ${ITK_SOURCE_DIR}/Utilities/Dart/PrintSelfCheck.tcl  
          ${ITK_SOURCE_DIR}/Code/Algorithms)
