--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -50,6 +50,7 @@ ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
+ADD_TEST(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_TEST(itkResampleImageTest itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest)
@@ -123,6 +124,7 @@ ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
+ADD_EXECUTABLE(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_EXECUTABLE(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_EXECUTABLE(itkResampleImageTest itkResampleImageTest )
 ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest )
