Added this files after they got moved from the Algorithms directory and renamed from .txx to .cxx

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -23,7 +23,9 @@ itkObject
 itkObjectFactoryBase 
 itkOutputWindow 
 itkProcessObject 
-itkRegion 
+itkRegion
+itkSegmentationBorder
+itkSegmentationRegion 
 itkSimpleFastMutexLock
 itkTimeStamp 
 itkVersion 
