ERR: this is not the algorithms directory.

--- a/Testing/Code/Numerics/CMakeLists.txt
+++ b/Testing/Code/Numerics/CMakeLists.txt
@@ -3,7 +3,7 @@ SUBDIRS(vxl)
 IF (TCL_TCLSH)
 ADD_TEST(PrintSelf-Numerics ${TCL_TCLSH}
          ${ITK_SOURCE_DIR}/Utilities/Dart/PrintSelfCheck.tcl  
-         ${ITK_SOURCE_DIR}/Code/Algorithms)
+         ${ITK_SOURCE_DIR}/Code/Numerics)
 ENDIF (TCL_TCLSH)
 
 ADD_TEST(itkAmoebaOptimizerTest itkAmoebaOptimizerTest)
