ERR: wrong test name.

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -35,7 +35,7 @@ IF (USE_VTK_FILE)
 ENDIF (USE_VTK_FILE)
 
 IF (TCL_TCLSH)
-ADD_TEST(PrintSelf-Algorithms ${TCL_TCLSH}
+ADD_TEST(PrintSelf-IO ${TCL_TCLSH}
          ${ITK_SOURCE_DIR}/Utilities/Dart/PrintSelfCheck.tcl  
          ${ITK_SOURCE_DIR}/Code/IO)
 ENDIF (TCL_TCLSH)
