<typeinfo.h> is included only on MSVC, otherwise we include <typeinfo>.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -29,8 +29,9 @@ SOURCE_FILES(FEM_SRCS
 
   itkFEMSolver.cxx
 
-  itkFEMUtility.cxx
   itkFEMLightObject.cxx
+  itkFEMException.cxx
+  itkFEMUtility.cxx
 
 )
 
