Changed the macro _FEM_Build_Visualization_Routines_ to FEM_BUILD_VISUALIZATION.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -111,10 +111,10 @@ ENDIF(FEM_USE_SMART_POINTERS)
 
 # Add an option to build the visualization functions
 IF(WIN32)
-    OPTION(FEM_VISUALIZATION "Select whether the visualization functions will be built for Finite Elements Modeling (FEM) classes or not. If you select to build visualization functions, be sure to define _FEM_Build_Visualization_Routines_ macro before including the FEM classes.")
+    OPTION(FEM_VISUALIZATION "Select whether the visualization functions will be built for Finite Elements Modeling (FEM) classes or not. If you select to build visualization functions, be sure to define FEM_BUILD_VISUALIZATION macro before including the FEM classes.")
     IF(FEM_VISUALIZATION)
     # Define the macro that includes all the required functions and include MFC support
-    ADD_DEFINITIONS( -D_FEM_Build_Visualization_Routines_ /D "_AFXDLL" )
+    ADD_DEFINITIONS( -DFEM_BUILD_VISUALIZATION /D "_AFXDLL" )
     ENDIF(FEM_VISUALIZATION)
 ENDIF(WIN32)
 
