ENH: added SphereSourceTest.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -64,6 +64,7 @@ ADD_TEST(itkSupervisedClassifierTest itkSupervisedClassifierTest)
 ADD_TEST(itkUnsupervisedClassifierTest itkUnsupervisedClassifierTest)
 ADD_TEST(itkGibbsTest itkGibbsTest)
 ADD_TEST(itkDeformableTest itkDeformableTest)
+ADD_TEST(itkSphereSourceTest itkSphereSourceTest)
 ADD_TEST(itkVectorFuzzyConnectednessImageFilterTest itkVectorFuzzyConnectednessImageFilterTest)
 ADD_TEST(itkVoronoiDiagram2DTest itkVoronoiDiagram2DTest)
 ADD_TEST(itkVoronoiSegmentationImageFilterTest itkVoronoiSegmentationImageFilterTest)
@@ -95,7 +96,7 @@ ADD_EXECUTABLE(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescen
 ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
-
+ADD_EXECUTABLE(itkSphereSourceTest itkSphereSourceTest)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
