--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -11,5 +11,10 @@ IF(UNIX)
   LINK_LIBRARIES (
   -lm
   )
+  IF (NOT ITK_USE_SYSTEM_STDLIB)
+  LINK_LIBRARIES (
+  -lCio
+  )
+  ENDIF (NOT ITK_USE_SYSTEM_STDLIB)
 ENDIF(UNIX)
 
