--- a/Utilities/stdlib/CMakeLists.txt
+++ b/Utilities/stdlib/CMakeLists.txt
@@ -21,5 +21,5 @@ SOURCE_FILES(COMPLEX_SRCS
 	complex_io.cxx complex_trig.cxx			
 )
 
-ADD_LIBRARY(Cio SHARED C_LOCALE_SRCS IOSTREAM_SRCS COMPLEX_SRCS)
+ADD_LIBRARY(Cio STATIC C_LOCALE_SRCS IOSTREAM_SRCS COMPLEX_SRCS)
 
