ENH: itkImageMapperTest added

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -35,6 +35,7 @@ ADD_TEST(itkFastMarchingExtensionImageFilterTest itkFastMarchingExtensionImageFi
 ADD_TEST(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
 ADD_TEST(itkAlgorithmsHeaderTest itkAlgorithmsHeaderTest)
 ADD_TEST(itkFuzzyConnectednessImageFilterTest itkFuzzyConnectednessImageFilterTest)
+ADD_TEST(itkImageMapperTest itkImageMapperTest)
 ADD_TEST(itkImageMomentsTest itkImageMomentsTest)
 ADD_TEST(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
@@ -83,6 +84,7 @@ ADD_EXECUTABLE(itkFastMarchingExtensionImageFilterTest itkFastMarchingExtensionI
 ADD_EXECUTABLE(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
 ADD_EXECUTABLE(itkAlgorithmsHeaderTest itkAlgorithmsHeaderTest)
 ADD_EXECUTABLE(itkFuzzyConnectednessImageFilterTest itkFuzzyConnectednessImageFilterTest)
+ADD_EXECUTABLE(itkImageMapperTest itkImageMapperTest)
 ADD_EXECUTABLE(itkImageMomentsTest itkImageMomentsTest)
 ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
