ENH: break vtk cvs like for png and zlib and change names to itkpng and itkzlib

--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -17,7 +17,7 @@ itkVTKImageIO
 
 # Add ITKIO library
 ADD_LIBRARY(ITKIO ITKIO_SRCS)
-TARGET_LINK_LIBRARIES(ITKIO ITKCommon vtkpng vtkzlib)
+TARGET_LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib)
 
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/png)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/zlib)
