--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -3,7 +3,7 @@ INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/IO)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/zlib)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/png)
 
-LINK_LIBRARIES(ITKIO ITKCommon vtkpng vtkzlib)
+LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib)
 
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/png)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/zlib)
