--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,5 @@ configure        crlf=input
 cvsrmvend        crlf=input
 install-sh       crlf=input
 time_fastops.mk  crlf=input
+vxl_doxy.pl      crlf=input
 zap.pl           crlf=input
