--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -49,6 +49,7 @@ ADD_TEST(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistra
 ADD_TEST(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
 ADD_TEST(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
+ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_TEST(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
@@ -105,6 +106,7 @@ ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGrad
 ADD_EXECUTABLE(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkSphereSourceTest itkSphereSourceTest)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
+ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
