ENH: new filter implementing min/max curvature denoising.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -53,6 +53,7 @@ ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_TEST(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
+ADD_TEST(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilterTest)
 ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_TEST(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
@@ -110,6 +111,7 @@ ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
+ADD_EXECUTABLE(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilterTest)
 ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_EXECUTABLE(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
