ENH: added new test.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -56,6 +56,7 @@ ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_TEST(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_TEST(itkPlaheImageFilterTest itkPlaheImageFilterTest)
+ADD_TEST(itkReflectiveImageRegionIteratorTest  itkReflectiveImageRegionIteratorTest )
 ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_TEST(itkResampleImageTest itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest)
@@ -132,6 +133,7 @@ ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_EXECUTABLE(itkPlaheImageFilterTest itkPlaheImageFilterTest)
 ADD_EXECUTABLE(itkReflectImageFilterTest itkReflectImageFilterTest)
+ADD_EXECUTABLE(itkReflectiveImageRegionIteratorTest itkReflectiveImageRegionIteratorTest )
 ADD_EXECUTABLE(itkResampleImageTest itkResampleImageTest )
 ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest )
 ADD_EXECUTABLE(itkShrinkImageTest itkShrinkImageTest)
