ENH: new ITKNumerics library for non-templated classes

--- a/Code/Numerics/CMakeLists.txt
+++ b/Code/Numerics/CMakeLists.txt
@@ -1,5 +1,18 @@
 SUBDIRS(vxl Statistics FEM)
+# Sources of non-templated classes.
+SOURCE_FILES(ITKNumerics_SRCS
+itkCacheableScalarFunction
+itkCompositeValleyFunction
+itkMultivariateLegendrePolynomial
+)
 
 LINK_LIBRARIES (
 VXLNumerics
 )
+
+IF (WIN32)
+  SOURCE_FILES(ITKNumerics_SRCS itkWin32OutputWindow)
+ENDIF (WIN32)
+
+ADD_LIBRARY(ITKNumerics ITKNumerics_SRCS)
+
