ENH: Two new classes.
HistogramMatchingImageFilter - normalizes the grayscale values between
two image by histogram matching.

OtsuThresholdImageCalculator - compute the Otsu's threshold of an image
by maximizing the between-class variance.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -3,6 +3,8 @@ INCLUDE_DIRECTORIES(
 ${ITK_SOURCE_DIR}/Code/BasicFilters
 ${ITK_SOURCE_DIR}/Code/IO
 ${ITK_SOURCE_DIR}/Code/Algorithms
+${ITK_SOURCE_DIR}/Code/Numerics
+${ITK_SOURCE_DIR}/Code/Numerics/Statistics
 )
 
 LINK_DIRECTORIES(
@@ -36,6 +38,7 @@ ADD_TEST(itkFastMarchingExtensionImageFilterTest itkFastMarchingExtensionImageFi
 ADD_TEST(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
 ADD_TEST(itkAlgorithmsHeaderTest itkAlgorithmsHeaderTest)
 ADD_TEST(itkFuzzyConnectednessImageFilterTest itkFuzzyConnectednessImageFilterTest)
+ADD_TEST(itkHistogramMatchingImageFilterTest itkHistogramMatchingImageFilterTest)
 ADD_TEST(itkImageMapperTest itkImageMapperTest)
 ADD_TEST(itkImageMomentsTest itkImageMomentsTest)
 ADD_TEST(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
@@ -63,6 +66,7 @@ ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolu
 ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_TEST(itkNewTest itkNewTest)
+ADD_TEST(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
 ADD_TEST(itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest  itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest)
 ADD_TEST(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
@@ -88,6 +92,7 @@ ADD_EXECUTABLE(itkFastMarchingExtensionImageFilterTest itkFastMarchingExtensionI
 ADD_EXECUTABLE(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
 ADD_EXECUTABLE(itkAlgorithmsHeaderTest itkAlgorithmsHeaderTest)
 ADD_EXECUTABLE(itkFuzzyConnectednessImageFilterTest itkFuzzyConnectednessImageFilterTest)
+ADD_EXECUTABLE(itkHistogramMatchingImageFilterTest itkHistogramMatchingImageFilterTest)
 ADD_EXECUTABLE(itkImageMapperTest itkImageMapperTest)
 ADD_EXECUTABLE(itkImageMomentsTest itkImageMomentsTest)
 ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
@@ -122,6 +127,7 @@ ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMulti
 ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_EXECUTABLE(itkNewTest itkNewTest)
+ADD_EXECUTABLE(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
 ADD_EXECUTABLE(itkRegionGrow2DTest itkRegionGrow2DTest)
 ADD_EXECUTABLE(itkSupervisedClassifierTest itkSupervisedClassifierTest)
 ADD_EXECUTABLE(itkUnsupervisedClassifierTest itkUnsupervisedClassifierTest)
