ENH: Added a structuring element for morphology

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -28,6 +28,7 @@ ADD_TEST(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest)
 ADD_TEST(itkAdaptImageFilterTest itkAdaptImageFilterTest)
 ADD_TEST(itkAdaptImageFilterTest2 itkAdaptImageFilterTest2)
 ADD_TEST(itkBasicArchitectureTest itkBasicArchitectureTest)
+ADD_TEST(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBloxCoreAtomTest)
@@ -104,6 +105,7 @@ ADD_EXECUTABLE(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest
 ADD_EXECUTABLE(itkAdaptImageFilterTest itkAdaptImageFilterTest)
 ADD_EXECUTABLE(itkAdaptImageFilterTest2 itkAdaptImageFilterTest2)
 ADD_EXECUTABLE(itkBasicArchitectureTest itkBasicArchitectureTest)
+ADD_EXECUTABLE(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_EXECUTABLE(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_EXECUTABLE(itkBloxCoreAtomTest itkBloxCoreAtomTest)
