ENH:  - added EdgePotentialImageFilter to compute edge potential from the image gradient.  - updated doc for itkShapeDetectionLevelSetFilter.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -37,6 +37,7 @@ ADD_TEST(itkCurvatureAnisotropicDiffusionImageFilterTest itkCurvatureAnisotropic
 ADD_TEST(itkCyclicReferences itkCyclicReferences)
 ADD_TEST(itkDanielssonDistanceMapImageFilterTest itkDanielssonDistanceMapImageFilterTest)
 ADD_TEST(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGradientTest)
+ADD_TEST(itkEdgePotentialImageFilterTest itkEdgePotentialImageFilterTest)
 ADD_TEST(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
 ADD_TEST(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_TEST(itkExpandImageFilterTest itkExpandImageFilterTest)
@@ -114,6 +115,7 @@ ADD_EXECUTABLE(itkCurvatureAnisotropicDiffusionImageFilterTest itkCurvatureAniso
 ADD_EXECUTABLE(itkCyclicReferences itkCyclicReferences)
 ADD_EXECUTABLE(itkDanielssonDistanceMapImageFilterTest itkDanielssonDistanceMapImageFilterTest)
 ADD_EXECUTABLE(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGradientTest)
+ADD_EXECUTABLE(itkEdgePotentialImageFilterTest itkEdgePotentialImageFilterTest)
 ADD_EXECUTABLE(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
 ADD_EXECUTABLE(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkExpandImageFilterTest itkExpandImageFilterTest)
