ENH:B-Spline interpolation Function

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -17,6 +17,7 @@ ADD_TEST(itkAffineTransformTest itkAffineTransformTest)
 ADD_TEST(itkArrayTest itkArrayTest)
 ADD_TEST(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
 ADD_TEST(itkBoundingBoxTest itkBoundingBoxTest)
+ADD_TEST(itkBSplineInterpolateImageFunctionTest itkBSplineInterpolateImageFunctionTest)
 ADD_TEST(itkByteSwapTest itkByteSwapTest)
 ADD_TEST(itkConstNeighborhoodIteratorTest itkConstNeighborhoodIteratorTest)
 ADD_TEST(itkConstSmartNeighborhoodIteratorTest itkConstSmartNeighborhoodIteratorTest)
@@ -70,6 +71,7 @@ ADD_EXECUTABLE(itkAffineTransformTest itkAffineTransformTest)
 ADD_EXECUTABLE(itkArrayTest itkArrayTest)
 ADD_EXECUTABLE(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
 ADD_EXECUTABLE(itkBoundingBoxTest itkBoundingBoxTest)
+ADD_EXECUTABLE(itkBSplineInterpolateImageFunctionTest itkBSplineInterpolateImageFunctionTest)
 ADD_EXECUTABLE(itkByteSwapTest itkByteSwapTest)
 ADD_EXECUTABLE(itkConstNeighborhoodIteratorTest itkConstNeighborhoodIteratorTest)
 ADD_EXECUTABLE(itkConstRandomAccessNeighborhoodIteratorTest itkConstRandomAccessNeighborhoodIteratorTest)
