first checkin of median filter

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -55,6 +55,7 @@ ADD_TEST(itkInteriorExteriorMeshFilterTest itkInteriorExteriorMeshFilterTest )
 ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
+ADD_TEST(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_TEST(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_TEST(itkPlaheImageFilterTest itkPlaheImageFilterTest)
@@ -133,6 +134,7 @@ ADD_EXECUTABLE(itkInteriorExteriorMeshFilterTest itkInteriorExteriorMeshFilterTe
 ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
+ADD_EXECUTABLE(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_EXECUTABLE(itkPlaheImageFilterTest itkPlaheImageFilterTest)
