ENH: added test.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -16,6 +16,7 @@ ADD_TEST(itkAdaptorComparisonTest itkAdaptorComparisonTest)
 ADD_TEST(itkAffineTransformTest itkAffineTransformTest)
 ADD_TEST(itkArrayTest itkArrayTest)
 ADD_TEST(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
+ADD_TEST(itkBinaryThresholdImageFunctionTest itkBinaryThresholdImageFunctionTest)
 ADD_TEST(itkBoundingBoxTest itkBoundingBoxTest)
 ADD_TEST(itkBSplineInterpolateImageFunctionTest itkBSplineInterpolateImageFunctionTest)
 ADD_TEST(itkByteSwapTest itkByteSwapTest)
@@ -70,6 +71,7 @@ ADD_EXECUTABLE(itkAdaptorComparisonTest itkAdaptorComparisonTest)
 ADD_EXECUTABLE(itkAffineTransformTest itkAffineTransformTest)
 ADD_EXECUTABLE(itkArrayTest itkArrayTest)
 ADD_EXECUTABLE(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
+ADD_EXECUTABLE(itkBinaryThresholdImageFunctionTest itkBinaryThresholdImageFunctionTest)
 ADD_EXECUTABLE(itkBoundingBoxTest itkBoundingBoxTest)
 ADD_EXECUTABLE(itkBSplineInterpolateImageFunctionTest itkBSplineInterpolateImageFunctionTest)
 ADD_EXECUTABLE(itkByteSwapTest itkByteSwapTest)
